<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/menu_repeat"
        android:title="@string/menu_repeat" />
    
    <item
        android:id="@+id/menu_shuffle"
        android:title="@string/menu_shuffle" />
    
    <item
        android:id="@+id/menu_add_to_playlist"
        android:title="@string/menu_add_to_playlist" />
    
    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share" />
    
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />
    
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh" />
    
    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit" />
</menu>

