<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/background_image_description" />

    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/icon_back"
        android:contentDescription="@string/content_description_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Top Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingStart="50dp"
        android:text="@string/title_choose_style"
        android:textColor="#6A1BB9"
        android:textSize="30sp"
        android:fontFamily="@font/press_start_2p_regular"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- 2×2 Grid -->
    <GridLayout
        android:id="@+id/grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <!-- ========== 1 Chinese ========== -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgRock"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/content_description_rock"
                android:scaleType="fitCenter"
                android:src="@drawable/style_rock" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRock"
                style="@style/StylePillButton"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/press_start_2p_regular"
                android:text="@string/label_rock"
                android:textSize="10sp" />

        </LinearLayout>

        <!-- ========== 2 Classic ========== -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgClassic"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="fitCenter"
                android:src="@drawable/style_classic"
                android:contentDescription="@string/content_description_classic"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClassic"
                style="@style/StylePillButton"
                android:fontFamily="@font/press_start_2p_regular"
                android:textSize="10sp"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_classic"/>
        </LinearLayout>

        <!-- ========== 3 Rock ========== -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgChinese"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/content_description_chinese"
                android:scaleType="fitCenter"
                android:src="@drawable/style_chinese" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChinese"
                style="@style/StylePillButton"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/press_start_2p_regular"
                android:text="@string/label_chinese_style"
                android:textSize="10sp" />
        </LinearLayout>

        <!-- ========== 4 Electronic ========== -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgElectronic"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="fitCenter"
                android:src="@drawable/style_electronic"
                android:contentDescription="@string/content_description_electronic"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnElectronic"
                style="@style/StylePillButton"
                android:fontFamily="@font/press_start_2p_regular"
                android:textSize="10sp"
                android:layout_width="140dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_electronic"/>
        </LinearLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>