<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/backgroundGif"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/icon_back"
            android:contentDescription="Back"
            android:scaleType="fitCenter"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/Information_title"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/press_start_2p_regular"
            android:letterSpacing="0.05"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/infoCard"
        android:layout_width="600dp"
        android:layout_height="280dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_search_input"
        android:elevation="8dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Information_text1"
                    android:textColor="@color/dark_blue"
                    android:textSize="12sp"
                    android:fontFamily="@font/press_start_2p_regular"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Information_text2"
                    android:textColor="@color/purple_map"
                    android:textSize="12sp"
                    android:fontFamily="@font/press_start_2p_regular"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Information_text3"
                    android:textColor="@color/dark_blue"
                    android:textSize="12sp"
                    android:fontFamily="@font/press_start_2p_regular"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Information_text4"
                    android:textColor="@color/purple_map"
                    android:textSize="12sp"
                    android:fontFamily="@font/press_start_2p_regular"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="4dp"/>
            </LinearLayout>
        </ScrollView>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
